fix: spacing

--- a/static/style.css
+++ b/static/style.css
@@ -10,3 +10,7 @@
 #post table td:first-child {
     width: 140px;
 }
+
+section#main-content .paper-links {
+    margin-top: 0.6em;
+}
